[package]
name = "yuanshen-workarounds-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.14", features = ["json", "cookies"] }
serde = { version = "1.0.154", features = ["derive"] }
anyhow = "1.0.69"
regex = "1.7.1"
lazy_static = "1.4.0"
thiserror = "1.0.39"
