[package]
name = "yuanshen-workarounds-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = [
    "macros",
    "rustls",
    "ctrlc_handler",
], default-features = false }
teloxide-core = { version = "0.9.1", features = [
    "throttle",
    "rustls",
], default-features = false }

log = "0.4"
pretty_env_logger = "0.4"

reqwest = { version = "0.11.14", features = [
    "json",
    "cookies",
    "rustls-tls-native-roots",
], default-features = false }
tokio = { version = "1.26", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.154", features = ["derive"] }

anyhow = "1.0.69"
thiserror = "1.0.39"

regex = "1.7.1"
lazy_static = "1.4.0"
bili-wbi-sign-rs = { git = "https://github.com/000ylop/bili-wbi-sign-rs/", version = "0.1.0" }
url = "2.4.0"
ttl_cache = "0.5.1"
